<resources>
    <string name="app_name">GestorFacT</string>
    <string name="tituloInicioSesion">INICIA SESIÓN</string>
    <string name="correo">Correo Electronico</string>
    <string name="contrasena">Contraseña</string>
    <string name="iniciar">Iniciar sensión</string>
    <string name="registrarse">Registrarte</string>
    <string name="registrate">Registrate</string>
    <string name="atras">Atras</string>
    <string name="contrasenaOtra">Vuelve a poner tu contraseña</string>
    <string name="nacimiento">Fecha de nacimiento</string>

    <string name="facturacion">Facturación</string>
    <string name="pendiente">Pendiente</string>
    <string name="facturas">Facturas</string>
    <string name="facAbono">Facturas de abono</string>
    <string name="ventas">Ventas</string>
    <string name="presupuestoas">Presupuestos</string>
    <string name="pedidos">Pedidos</string>
    <string name="albaranes">Albaranes</string>
    <string name="compras">Compras</string>
    <string name="editarProducto">Editar Producto:</string>
    <string name="referencia">Referencia</string>
    <string name="nombre">Nombre</string>
    <string name="precioBase">Precio base</string>
    <string name="codigoProducto">Codigo producto</string>
    <string name="stock">Stock</string>
    <string name="anadirProducto">Añadir producto</string>
    <string name="registroFallido">Registro fallido</string>
    <string name="rellenarCampos">Tienes que rellenar todos los campos</string>
    <string name="ok">Ok</string>
    <string name="cambiarFoto">Cambiar Foto</string>
    <string name="cambiar">Cambiar</string>
    <string name="fechaNacimiento">Fecha de nacimiento</string>
    <string name="registradoConExito">Te has registrado con exito.</string>
    <string name="fechaValida">Tienes que poner una fecha valida</string>
    <string name="noPermisoCamar">No tienes permisos de la camara</string>
    <string name="tienesQueSerMayorEdad">Tienes que ser mayor de edad</string>
    <string name="noPermisoCamara">No tienes permisos de la camara</string>
    <string name="nuestraApp">Esta es nuestra aplicacion</string>
    <string name="bienvenido">Bienvenido</string>
    <string name="anadirCliente">Añadir cliente</string>
    <string name="email">Email</string>
    <string name="nif">NIF</string>
    <string name="telefono">Telefono</string>
    <string name="direccion">Dirección</string>
    <string name="localidad">Localidad</string>
    <string name="provincia">Provincia</string>
    <string name="codigoPostal">Codigo postal</string>
    <string name="editarCliente">Editar cliente</string>
    <string name="nuevaVenta">Nueva venta</string>
    <string name="albaran">Albarán</string>
    <string name="presupuesto">Presupuesto</string>
    <string name="pedido">Pedido</string>
    <string name="fecha">Fecha</string>
    <string name="precio">Precio</string>
    <string name="cantidad">Cantidad</string>
    <string name="total">Total</string>
    <string name="anadirLinea">Añadir linea</string>
    <string name="totalBase">Total base (€)</string>
    <string name="iva">IVA (€)</string>
    <string name="totalEuro">Total (€)</string>
    <string name="nuevaFactura">Nueva factura</string>
    <string name="abono">Abono</string>
    <string name="factura">Factura</string>
    <string name="cliente">Cliente</string>
    <string name="titulo">Titulo</string>
    <string name="camposVacios">No puede haber campos vacios</string>
    <string name="contieneTexto">Los campos numericos no pueden contener texto</string>
    <string name="numeroMal">Los numeros no son validos</string>
    <string name="contieneNegativo">No puede haber numeros negativos</string>
    <string name="numeroBajo">La cantidad y el precio no puede ser tan pequeño</string>
    <string name="completarCheck">Tienes que marcar una casilla</string>
    <string name="tituloRepetido">No puede haber un titulo repetido</string>
    <string name="minimoProducto">Mínimo tiene que haber un producto añadido</string>
    <string name="estadoAlbaran">Estado</string>
    <string name="seleccionarCliente">Tienes que seleccionar un cliente</string>
    <string name="nuevaCompra">Nueva Compra</string>
    <string name="devolucion">Devolucion</string>
    <string name="compra">Compra</string>
    <string name="proveedor">Proveedor</string>


</resources>