<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/contenedorFondoAñadirCliente"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActividadAnadirCliente">

    <ImageView
        android:id="@+id/fondoAñadirCliente"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/engranajes" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/contenedorPrincipalAñadirCliente"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/contenedorTituloAñadirCliente"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            style="@style/panelEditar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textoAñadirCliente"
                style="@style/tituloParaEditar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/anadirCliente" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/contenedorCamposAñadirCliente"
            style="@style/panelEditar"

            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/contenedorTituloAñadirCliente">

            <LinearLayout
                android:id="@+id/contenedorPrimeraFilaCliente"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/contenedorCampoReferenciaClienteAñadir"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="1">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/campoReferenciaClienteEditarAñadir"
                        style="@style/contenedores"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/referencia" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/contenedorCampoNombreClienteAñadir"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="1">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/campoNombreClienteAñadir"
                        style="@style/contenedores"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/nombre" />
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/contenedorSegundaFilaCliente"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/contenedorCampoEmailAñadir"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/campoEmailAñandir"
                        style="@style/contenedores"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/contenedorCampoNifAñadir"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/campoNifAñadirCliente"
                        style="@style/contenedores"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/nif" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/contenedorTerceraFilaCliente"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/contenedorCampoTelefonoAñadir"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="1">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/campoTelefonoAñadirCliente"
                        style="@style/contenedores"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/telefono" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/contenedorCampoDireccionAñadir"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="1">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/campoDireccionAñadirCliente"
                        style="@style/contenedores"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/direccion" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/contenedorCuartaFilaCliente"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/contenedorCampoLocalidadAñadirCliente"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="1">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/campoLocalidadClienteAñadir"
                        style="@style/contenedores"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/localidad" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/contenedorCampoProvinciaAñadirCliente"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="1">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/campoProvinciaCliente"
                        style="@style/contenedores"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/provincia" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/contenedorCampoCodigoPostalCliente"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:paddingLeft="40dp"
                android:paddingRight="40dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/campoCodigoPostalCliente"
                    style="@style/contenedores"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/codigoPostal" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <ImageButton
            android:id="@+id/botonTerminadoAñadiendoCliente"
            android:layout_width="82dp"
            android:layout_height="67dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:backgroundTint="#00FF0A"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/check" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>