<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/contenedorFondoAñadirProducto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActividadAnadirProducto">

    <ImageView
        android:id="@+id/fondoAñadirProductos"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/engranajes" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/contenedorPrincipalAñadirProducto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/contenedorTituloAñadirProducto"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            style="@style/panelEditar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textoAñadirUsuario"
                style="@style/tituloParaEditar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/anadirProducto" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/contenedorCamposAñadirProducto"
            style="@style/panelEditar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/contenedorTituloAñadirProducto">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/contenedorCampoReferenciaProductoAñadir"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/campoReferenciaProductoEditarAñadir"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/referencia" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/contenedorCampoNombreProductoAñadir"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/campoNombreProductoAñadir"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/nombre" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/contenedorCampoPrecioAñadir"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/campoPrecioProductoAñadir"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/precioBase" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/contenedorCampoStockAñadir"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/campoStockAñandir"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/stock" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <ImageButton
            android:id="@+id/botonTerminadoAñadiendoProducto"
            android:layout_width="82dp"
            android:layout_height="67dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:backgroundTint="#00FF0A"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/check" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>